--- a/_modules/flow_matching/path/mixture.html
+++ b/_modules/flow_matching/path/mixture.html
@@ -15,8 +15,8 @@
     document.documentElement.dataset.mode = localStorage.getItem("mode") || "";
     document.documentElement.dataset.theme = localStorage.getItem("theme") || "";
   </script>
-  <!-- 
-    this give us a css class that will be invisible only if js is disabled 
+  <!--
+    this give us a css class that will be invisible only if js is disabled
   -->
   <noscript>
     <style>
@@ -26,19 +26,19 @@
   </noscript>
   
   <!-- Loaded before other Sphinx assets -->
-  <link href="../../../_static/styles/theme.css?digest=26a4bc78f4c0ddb94549" rel="stylesheet" />
-<link href="../../../_static/styles/pydata-sphinx-theme.css?digest=26a4bc78f4c0ddb94549" rel="stylesheet" />
+  <link href="../../../_static/styles/theme.css?digest=8878045cc6db502f8baf" rel="stylesheet" />
+<link href="../../../_static/styles/pydata-sphinx-theme.css?digest=8878045cc6db502f8baf" rel="stylesheet" />
 
-    <link rel="stylesheet" type="text/css" href="../../../_static/pygments.css?v=a746c00c" />
+    <link rel="stylesheet" type="text/css" href="../../../_static/pygments.css?v=8f2a1f02" />
     <link rel="stylesheet" type="text/css" href="../../../_static/css/custom.css?v=a47e71e3" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/katex@0.16.10/dist/katex.min.css" />
     <link rel="stylesheet" type="text/css" href="../../../_static/katex-math.css?v=91adb8b6" />
   
   <!-- So that users can add custom icons -->
-  <script src="../../../_static/scripts/fontawesome.js?digest=26a4bc78f4c0ddb94549"></script>
+  <script src="../../../_static/scripts/fontawesome.js?digest=8878045cc6db502f8baf"></script>
   <!-- Pre-loaded scripts that we'll load fully later -->
-  <link rel="preload" as="script" href="../../../_static/scripts/bootstrap.js?digest=26a4bc78f4c0ddb94549" />
-<link rel="preload" as="script" href="../../../_static/scripts/pydata-sphinx-theme.js?digest=26a4bc78f4c0ddb94549" />
+  <link rel="preload" as="script" href="../../../_static/scripts/bootstrap.js?digest=8878045cc6db502f8baf" />
+<link rel="preload" as="script" href="../../../_static/scripts/pydata-sphinx-theme.js?digest=8878045cc6db502f8baf" />
 
     <script src="../../../_static/documentation_options.js?v=5929fcd5"></script>
     <script src="../../../_static/doctools.js?v=9a2dae69"></script>
@@ -277,9 +277,14 @@
   
   
   <div class="sidebar-primary-items__end sidebar-primary__section">
+      <div class="sidebar-primary-item">
+<div id="ethical-ad-placement"
+      class="flat"
+      data-ea-publisher="readthedocs"
+      data-ea-type="readthedocs-sidebar"
+      data-ea-manual="true">
+</div></div>
   </div>
-  
-  <div id="rtd-footer-container"></div>
 
 
       </div>
@@ -332,21 +337,21 @@
 <span class="c1"># This source code is licensed under the CC-by-NC license found in the</span>
 <span class="c1"># LICENSE file in the root directory of this source tree.</span>
 
-<span class="kn">import</span> <span class="nn">torch</span>
-<span class="kn">import</span> <span class="nn">torch.nn.functional</span> <span class="k">as</span> <span class="nn">F</span>
+<span class="kn">import</span><span class="w"> </span><span class="nn">torch</span>
+<span class="kn">import</span><span class="w"> </span><span class="nn">torch.nn.functional</span><span class="w"> </span><span class="k">as</span><span class="w"> </span><span class="nn">F</span>
 
-<span class="kn">from</span> <span class="nn">torch</span> <span class="kn">import</span> <span class="n">Tensor</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">torch</span><span class="w"> </span><span class="kn">import</span> <span class="n">Tensor</span>
 
-<span class="kn">from</span> <span class="nn">flow_matching.path.path</span> <span class="kn">import</span> <span class="n">ProbPath</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">flow_matching.path.path</span><span class="w"> </span><span class="kn">import</span> <span class="n">ProbPath</span>
 
-<span class="kn">from</span> <span class="nn">flow_matching.path.path_sample</span> <span class="kn">import</span> <span class="n">DiscretePathSample</span>
-<span class="kn">from</span> <span class="nn">flow_matching.path.scheduler</span> <span class="kn">import</span> <span class="n">ConvexScheduler</span>
-<span class="kn">from</span> <span class="nn">flow_matching.utils</span> <span class="kn">import</span> <span class="n">expand_tensor_like</span><span class="p">,</span> <span class="n">unsqueeze_to_match</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">flow_matching.path.path_sample</span><span class="w"> </span><span class="kn">import</span> <span class="n">DiscretePathSample</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">flow_matching.path.scheduler</span><span class="w"> </span><span class="kn">import</span> <span class="n">ConvexScheduler</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">flow_matching.utils</span><span class="w"> </span><span class="kn">import</span> <span class="n">expand_tensor_like</span><span class="p">,</span> <span class="n">unsqueeze_to_match</span>
 
 
 <div class="viewcode-block" id="MixtureDiscreteProbPath">
 <a class="viewcode-back" href="../../../generated/flow_matching.path.MixtureDiscreteProbPath.html#flow_matching.path.MixtureDiscreteProbPath">[docs]</a>
-<span class="k">class</span> <span class="nc">MixtureDiscreteProbPath</span><span class="p">(</span><span class="n">ProbPath</span><span class="p">):</span>
+<span class="k">class</span><span class="w"> </span><span class="nc">MixtureDiscreteProbPath</span><span class="p">(</span><span class="n">ProbPath</span><span class="p">):</span>
 <span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;The ``MixtureDiscreteProbPath`` class defines a factorized discrete probability path.</span>
 
 <span class="sd">    This path remains constant at the source data point :math:`X_0` until a random time, determined by the scheduler, when it flips to the target data point :math:`X_1`.</span>
@@ -388,7 +393,7 @@
 <span class="sd">        scheduler (ConvexScheduler): The scheduler that provides :math:`\sigma_t`.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
-    <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">scheduler</span><span class="p">:</span> <span class="n">ConvexScheduler</span><span class="p">):</span>
+    <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">scheduler</span><span class="p">:</span> <span class="n">ConvexScheduler</span><span class="p">):</span>
         <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span>
             <span class="n">scheduler</span><span class="p">,</span> <span class="n">ConvexScheduler</span>
         <span class="p">),</span> <span class="s2">&quot;Scheduler for ConvexProbPath must be a ConvexScheduler.&quot;</span>
@@ -397,7 +402,7 @@
 
 <div class="viewcode-block" id="MixtureDiscreteProbPath.sample">
 <a class="viewcode-back" href="../../../generated/flow_matching.path.MixtureDiscreteProbPath.html#flow_matching.path.MixtureDiscreteProbPath.sample">[docs]</a>
-    <span class="k">def</span> <span class="nf">sample</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">x_0</span><span class="p">:</span> <span class="n">Tensor</span><span class="p">,</span> <span class="n">x_1</span><span class="p">:</span> <span class="n">Tensor</span><span class="p">,</span> <span class="n">t</span><span class="p">:</span> <span class="n">Tensor</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">DiscretePathSample</span><span class="p">:</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">sample</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">x_0</span><span class="p">:</span> <span class="n">Tensor</span><span class="p">,</span> <span class="n">x_1</span><span class="p">:</span> <span class="n">Tensor</span><span class="p">,</span> <span class="n">t</span><span class="p">:</span> <span class="n">Tensor</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">DiscretePathSample</span><span class="p">:</span>
 <span class="w">        </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;Sample from the affine probability path:</span>
 <span class="sd">            | given :math:`(X_0,X_1) \sim \pi(X_0,X_1)` and a scheduler :math:`(\alpha_t,\sigma_t)`.</span>
 <span class="sd">            | return :math:`X_0, X_1, t`, and :math:`X_t \sim p_t`.</span>
@@ -423,7 +428,7 @@
 
 <div class="viewcode-block" id="MixtureDiscreteProbPath.posterior_to_velocity">
 <a class="viewcode-back" href="../../../generated/flow_matching.path.MixtureDiscreteProbPath.html#flow_matching.path.MixtureDiscreteProbPath.posterior_to_velocity">[docs]</a>
-    <span class="k">def</span> <span class="nf">posterior_to_velocity</span><span class="p">(</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">posterior_to_velocity</span><span class="p">(</span>
         <span class="bp">self</span><span class="p">,</span> <span class="n">posterior_logits</span><span class="p">:</span> <span class="n">Tensor</span><span class="p">,</span> <span class="n">x_t</span><span class="p">:</span> <span class="n">Tensor</span><span class="p">,</span> <span class="n">t</span><span class="p">:</span> <span class="n">Tensor</span>
     <span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Tensor</span><span class="p">:</span>
 <span class="w">        </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;Convert the factorized posterior to velocity.</span>
@@ -481,8 +486,8 @@
   </div>
   
   <!-- Scripts loaded after <body> so the DOM is not blocked -->
-  <script defer src="../../../_static/scripts/bootstrap.js?digest=26a4bc78f4c0ddb94549"></script>
-<script defer src="../../../_static/scripts/pydata-sphinx-theme.js?digest=26a4bc78f4c0ddb94549"></script>
+  <script defer src="../../../_static/scripts/bootstrap.js?digest=8878045cc6db502f8baf"></script>
+<script defer src="../../../_static/scripts/pydata-sphinx-theme.js?digest=8878045cc6db502f8baf"></script>
 
   <footer class="bd-footer">
 <div class="bd-footer__inner bd-page-width">
@@ -515,7 +520,8 @@
       
         <div class="footer-item">
 <p class="theme-version">
-  Built with the <a href="https://pydata-sphinx-theme.readthedocs.io/en/stable/index.html">PyData Sphinx Theme</a> 0.16.0.
+  <!-- # L10n: Setting the PST URL as an argument as this does not need to be localized -->
+  Built with the <a href="https://pydata-sphinx-theme.readthedocs.io/en/stable/index.html">PyData Sphinx Theme</a> 0.16.1.
 </p></div>
       
     </div>
